--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=myblog11
+
+# Database configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/myblog11
+spring.datasource.username=root
+spring.datasource.password=teju
+
+# Hibernate configuration
+spring.jpa.hibernate.ddl-auto=update
+
+# spring security configuration
+spring.security.user.name=tejaswinikurre
+spring.security.user.password=password
